[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/player_orb.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=8]
resource_name = "color_pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.427451, 0.847059, 0.137255, 1 ), Color( 0.0156863, 0.780392, 0.796078, 1 ), Color( 0.980392, 0.137255, 0.027451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pulsate"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "recoil"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.9, 1.3, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 1, 2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "rotate"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="player" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="orb" type="Area2D" parent="."]
rotation = 6.28319
scale = Vector2( 1.66667, 1.33333 )

[node name="player_orb" type="Sprite" parent="orb"]
modulate = Color( 0.733333, 0.878431, 0.0431373, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="orb"]
scale = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="orb"]
autoplay = "pulsate"
anims/color_pulse = SubResource( 8 )
anims/pulsate = SubResource( 3 )
anims/recoil = SubResource( 4 )

[node name="orb_rotate" type="AnimationPlayer" parent="orb"]
anims/rotate = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="orb" to="." method="_on_orb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
